Se agrego a Metodología todo lo de la unidad 2

--- a/Autómatas y Lenguajes Formales/Unidad 1/2. Grámatica Formal.md
+++ b/Autómatas y Lenguajes Formales/Unidad 1/2. Grámatica Formal.md
@@ -93,7 +93,7 @@ Una gramática G se define como la cuádrupla: ***G = ( ∑T , ∑N , S, P )*** 
 - **Forma sentencial**: x es forma sentencial si existe una derivación desde el axioma hasta esa palabra, puesto esto en terminos sencillos, si se puede derivar entonses estamos en presencia de una forma sentencial.
 - **Sentencia**: x es sentencia si es forma sentencial y además todos sus símbolos pertenecen al alfabeto de símbolos terminales, en pocas palabras si esta conpuesta unicamente de simbolos terminales entonses es una secuencia.
 - **Lenguaje generado por una gramática L(G)**: es el conjunto de todas las sentencias de la gramática.
-- **Equivalencia de gramáticas**: dos gramáticas ***G1*** y ***G2*** son equivalentes si se verifica que: G1 ≈ G2 -> L(G1 ) = L(G2 ), es decir que esas dos gramaticas me produzcan el mismo lenguaje.
+- **Equivalencia de gramáticas**: dos gramáticas ***G1*** y ***G2*** son equivalentes si se verifica que: G1 ≈ G2 -> L(G1) = L(G2), es decir que esas dos gramaticas me produzcan el mismo lenguaje.
 - **Regla compresora**: es aquella cuya parte derecha está formada por menos símbolos que la parte izquierda.
 
 ---
@@ -128,7 +128,7 @@ En estas gramáticas. la parte izquierda de las producciones sólo puede tener u
 
 <span class="centerImg"> ![[2Tipo-gramatica.png]] </span>
 
-Estas gramáticas se denominan de contexto libre, porque a la hora de transformar una palabra en otra, el símbolo no terminal que se transforma no depende de los que estén a la izquierda o derecha. Así. cuando se realicen derivaciones en las que se transforme el símbolo A de la fórmula anterior, no hace falta saber qué hay alrededor de él.
+Estas gramáticas se denominan de contexto libre, porque a la hora de transformar una palabra en otra, el símbolo no terminal que se transforma no depende de los que estén a la izquierda o derecha. Así, cuando se realicen derivaciones en las que se transforme el símbolo A de la fórmula anterior, no hace falta saber qué hay alrededor de él.
 
 >[!info] Dato
 >Este tipo de gramática permite la descripción de la mayoría de los lenguajes de programación.
@@ -207,5 +207,4 @@ Representación gráfica de las derivaciones de una gramática. Se utilizan en l
 >***Ambigüedad***:  Cuando existe más de una forma de generar una palabra a partir del axioma de una gramática. Puede surgir a varios niveles:
 >- **Sentencia**: si tiene más de una derivación o árbol de derivación.
 >- **Gramática**: si tiene al menos una sentencia ambigua.
->- **Lenguaje**: si existe una gramática ambigua que lo genera. Si todas lasgramáticas que lo generan son ambiguas, el lenguaje es ***inherentemente ambiguo***.
-
+>- **Lenguaje**: si existe una gramática ambigua que lo genera. Si todas las gramáticas que lo generan son ambiguas, el lenguaje es ***inherentemente ambiguo***.
