--- a/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
@@ -35,7 +35,7 @@ Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de
 7. **Eficiencia**: Principio que refleja o relación entre los recursos utilizados y los objetivos conseguidos. 
 	- **Costo-Beneficio**: Se debera analizar el dominio del problema para el que se va a utilizar al lenguaje y a su vez su expresividad, para ver si éste nos brinda la eficiencia que nosotros estamos buscando para esa aplicacion.
 	- **Eficiencia de la implementación**: Relacionado a los esfuerzos necesarios para escribir un traductor para ese lenguaje.
-	- **Eficiencia del código**: Debe brindar facilidades para que un traductor pueda crear codigo ejecutable de manera eficiente, esto se puede hacer mediante un transpilador o utilizando el tipado estatico por sobre el dinamico.
+	- **Eficiencia del código**: Debe brindar facilidades para que un traductor pueda crear código ejecutable de manera eficiente, esto se puede hacer mediante un transpilador o utilizando el tipado estatico por sobre el dinamico.
 	- **Eficiencia de la traducción**: Debe permitir que el código se traduzca a codigo fuente de manera rapida y de un tamaño razonable. Esto se puede lograr por ejemplo exigiendo que las variables que se vayan a utilizar sean declaradas de antemano.
 	- **Eficiencia de la programación**: Esta relacionado a la facilidad de escritura del lenguaje y su exprecibidad, a través de una sintaxis consisa y la no declaración de las variables antes de su uso.
 
