--- a/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
@@ -1,5 +1,5 @@
 
-Cuando se pasa a la etapa de implementación del lenguaje, el implementador es el que se encarga de decidir sobre el tiempo de ligadura de las variables, al igual que la forma en la que se va a traducir el código. Aunque esto último está muy influenciado por el tiempo en el que se ligan las variables con los datos que estas representan, si se elige una liga en tiempo de ejecución se va a optar por un intérprete como forma de traducción; en cambio si se opta por ligar las variables antes de la ejecución el programa se va a traducir utilizando un compilador.
+Cuando se pasa a la etapa de implementación del lenguaje, el implementador es el que se encarga de decidir sobre el tiempo de ligadura de las variables, al igual que la forma en la que se va a traducir el código. Aunque esto último está muy influenciado por el tiempo en el que se ligan las variables con los datos que éstas representan, si se elige una liga en tiempo de ejecución se va a optar por un intérprete como forma de traducción; en cambio si se opta por ligar las variables antes de la ejecución el programa se va a traducir utilizando un compilador.
 
 ## Interpretes
 
@@ -39,11 +39,11 @@ El proceso de compilación consiste en dos pasos:
 - **Análisis semántico**: En esta etapa el código fuente comienza a tomar forma, en esta etapa se analizan las estructuras sintácticas y se comprueba que dichas estructuras cuenten con el significado correcto de acuerdo a su contexto, por lo general se cuenta con un analizador específico para cada tipo de estructura (laxema).
 
 >[!info] Cosas que suceden en el Análisis Semántico
->- Inserción de información implícita: al codigo que nosotros escribimos se le aplican las convenciones predeterminadas en caso de que el lenguajes las posea, por ejemplo en Fortran se puede declarar una variable y luego usarla sin necesidad aclarar su tipo, pero si la variable comenzaba con letras que iban de la ***I a la N*** es tomada como entero, de lo contrario es tomada como real, el compilador agregaba los datos necesarios que no se registre ningun error.
+>- **Inserción de información implícita**: al código que nosotros escribimos se le aplican las convenciones predeterminadas en caso de que el lenguajes las posea, por ejemplo en Fortran se puede declarar una variable y luego usarla sin necesidad de declarar su tipo, pero si la variable comenzaba con letras que iban de la ***I a la N*** es tomada como entero, de lo contrario es tomada como real, el compilador agregaba los datos necesarios que no se registre ningun error.
 >- Tanto el ***analizador sintáctico como semántico*** deben poder detectar los errores cuando se presentan y generar un mensaje apropiado.
 >- Determinan la mejor manera de continuar con el análisis semántico del resto del programa.
 >- Se procesan los macros y operaciones en tiempo real.
->	- Un macro es una porción de codigo que esta por fuera de nuestro programa y que va a ser insertado en el programa, la caracteristica principal de los macros es que para que estos puedan ser llamados deben estar compilados previamente o compilado en el momento. A su vez las macros se pueden insertar de dos maneras:
+>	- Un macro es una porción de codigo que esta por fuera de nuestro programa y que va a ser insertado en el programa, la caracteristica principal de los macros es que para que estos puedan ser llamados deben estar compilados previamente o ser compilado en el momento. A su vez las macros se pueden insertar de dos maneras:
 >		1. Se inserta el código fuente de estas macros a nuestro programa fuente y luego se compila.
 >		2. Se inserta la macro ya compilada en el programa y al final se termina de compilar.
 
