Corrección de algunos errores

--- a/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
@@ -15,7 +15,7 @@ son los metodos que orientan el proceso de programación de un componente o sist
 
 ## Paradigma Imperativo
 
-Los lenguajes que se encuentran dentro de este grupo se caracteriza por el tipo de sentencia con el que cuentan, ya que el codigo se ejecutara linea por linea una sentencia detras de otra a la vez que se le va asignando valores a  las variables y realizar operaciones entre ellas.
+Los lenguajes que se encuentran dentro de este grupo se caracteriza por el tipo de sentencia con el que cuentan, ya que el código se ejecutara linea por linea una sentencia detras de otra a la vez que se le va asignando valores a  las variables y realizar operaciones entre ellas.
 
 >[!important] Conceptos Claves
 >- **Variables**: Son la representación abstracta de un espacio de memoria, en el cual vamos a almacenar la información.
@@ -100,16 +100,15 @@ Se basa el la lógica de predicción, se puede decir que un programa en este par
 >- **Cláusula de Horn**: Forma restrictiva de la lógica de predicados, estas tienen una sola conclusión en cada cláusula. Es el nombre que se le da a las instrucciones básicas del paradigma y permite representar la mayoría de las proposiciones lógicas.
 >- **Relaciones**: Se establecen mediante la aserciones y que en la programación lógica juegan el mismo papel que los procedimientos en otros paradigma.
 
-En los lenguajes que comparten este paradigma, los valores están representados por valiables, pero estas no represenan direcciones de memoria.
-
 >[!info] Dato
->Por lo general se hace uso de este tipo de lenguajes en el desarrollo de motores de bases de datos, la creación de IAs, entre otras cosas.
+>- Por lo general se hace uso de este tipo de lenguajes en el desarrollo de motores de bases de datos, la creación de IAs, entre otras cosas.
+>- En los lenguajes que comparten este paradigma, los valores están representados por valiables, pero estas no represenan direcciones de memoria.
 
 La programación en el paradigma lógico se basa en un gran número de sentencias y relaciones lógicas que a su vez, están compuestas por relaciones más pequeñas debido a las ***cláusulas de Horn***, que fuerzan que estas sean simples y pequeñas.
 Luego de esto se inicia el proceso de ***Backtracking***, el cual, es explotado de manera única en este paradigma, lo que explica gran parte de su poder y expresividad.
 
 >[!important] Backtracking
->El backtracking es una estrategia algorítmica que busca todas las posibles soluciones dado un conjunto de variables iniciales para encontrar el resultado definido por el problema.
+>El backtracking es una estrategia algorítmica que busca todas las posibles soluciones dado un conjunto de variables iniciales con el fin de encontrar el resultado definido por el problema.
 
 ## Multiparadigma
 
