--- a/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
@@ -35,13 +35,12 @@ El proceso de compilación consiste en dos pasos:
 		2. Las palabras formen parte de nuestro lenguaje
 	- **Identificación del tipo de cada componente léxico**: junta los componentes léxicos (palabras) y las asigna al grupo al que pertenezcan (token).
 	- **Representación interna**: guarda todas estos componentes léxicos en la tabla de símbolos, a la cual, en posteriores procesos se le agregara más información a cada componente.
-- **Análisis sintáctico**: agrupa los componentes léxicos formando estructuras, las evalúa para comprobar sí dichas expresiones  son válidas para ese lenguaje y las va convinando para formar diferentes frases gramaticales. Una vez finalizada esta etapa queda conformado el árbol semántico.
+- **Análisis sintáctico**: agrupa los componentes léxicos formando estructuras, las evalúa para comprobar sí dichas expresiones  son válidas para ese lenguaje y las va convinando para formar diferentes frases gramaticales. Una vez finalizada esta etapa queda conformado el árbol de análisis sintáctico.
 - **Análisis semántico**: En esta etapa el código fuente comienza a tomar forma, en esta etapa se analizan las estructuras sintácticas y se comprueba que dichas estructuras cuenten con el significado correcto de acuerdo a su contexto, por lo general se cuenta con un analizador específico para cada tipo de estructura (laxema).
 
 >[!info] Cosas que suceden en el Análisis Semántico
 >- **Inserción de información implícita**: al código que nosotros escribimos se le aplican las convenciones predeterminadas en caso de que el lenguajes las posea, por ejemplo en Fortran se puede declarar una variable y luego usarla sin necesidad de declarar su tipo, pero si la variable comenzaba con letras que iban de la ***I a la N*** es tomada como entero, de lo contrario es tomada como real, el compilador agregaba los datos necesarios que no se registre ningun error.
->- Tanto el ***analizador sintáctico como semántico*** deben poder detectar los errores cuando se presentan y generar un mensaje apropiado.
->- Determinan la mejor manera de continuar con el análisis semántico del resto del programa.
+>- Tanto el ***analizador sintáctico como semántico*** deben poder detectar los errores cuando se presentan y generar un mensaje apropiado. Al mismo tiempo que deben determinar la mejor manera de continuar con el análisis semántico del resto del programa.
 >- Se procesan los macros y operaciones en tiempo real.
 >	- Un macro es una porción de codigo que esta por fuera de nuestro programa y que va a ser insertado en el programa, la caracteristica principal de los macros es que para que estos puedan ser llamados deben estar compilados previamente o ser compilado en el momento. A su vez las macros se pueden insertar de dos maneras:
 >		1. Se inserta el código fuente de estas macros a nuestro programa fuente y luego se compila.
