--- a/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/1. Evolución de los Lenguajes de Programación.md
@@ -24,7 +24,7 @@ Si bien a dia de hoy no se utiliza mas esta metodología y se opta por otras mas
 
 ### Lenguajes de Programción y Arquitectura de las Computadoras
 
-No devemos olvidarnos de que los lenguajes de programación estan limitados por la arquitectura de los equipos, la cual sigue siendo la ***arquitectura Von Neumann***, además otra limitación es la capacidad con la que cuenta la maquina.
+No devemos olvidarnos de que los lenguajes de programación estan limitados por la arquitectura de los equipos, la cual sigue siendo la ***arquitectura Von Neumann***, otra limitación es la capacidad con la que cuenta la maquina.
 
 >[!Important] El intermediario entre Humano y Maquina
 >Los lenguajes de programación son intermediarios entre el humano y la maquina, ya que este mismo nos proporciona sintaxis entendibles para el humano y que le permite escribir código claro para los usuarios, luego que el programador escribe todo el código, este debe pasar por un "traductor" que convierta todas esos enunciados en algo entendible por la maquina, estos traductores pueden ser ***compiladores o interpretes***, depende la forma del lenguaje.
