--- a/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
@@ -1,22 +1,23 @@
 
 ## Planificación y Diseño del Lenguaje
 
-A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese proncipio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación comenzaremos a diseñar el lenguaje.
+A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese proncipio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación para que se lo dese crear comenzaremos a diseñar el lenguaje.
 Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de **abstracción de datos** y **empaquetado**, es decir, la posibilidad de poder usar código ya previamente testeado y construido, sin tener que volver a escribirlo.
 
 ## Principios para un buen Diseño
 
-1. **Simplicidad**: Propiedad del diseño determinada por el número de componentes básicos, la minimalidad de los conceptos y la consistencia de sus estructuras. En caso de los lenguajes multiproposito, cuando se construye un programa con estos el programador que hace uso de ellos debe conocer las caracteristicas con las que va a resolver el problema, evitando el coque con otras funcionalidades que no domina en su totalidad. Un ejemplo de simplicidad es el lenguaje Java que solo cuenta con 50 palabras reservadas como tal, y el SDK con un conjunto de clases ya construidas en base a esas palabras.
+1. **Simplicidad**: Propiedad del diseño determinada por el número de componentes básicos, la minimalidad de los conceptos y la consistencia de sus estructuras. En caso de los lenguajes multiproposito, cuando se construye un programa con estos el programador que hace uso de ellos debe conocer las caracteristicas con las que va a resolver el problema, evitando el choque con otras funcionalidades que no domina en su totalidad.
 
 >[!note] Para tener en Cuenta
->El diseñador del lenguaje no debe estar preocupado por las nesecidades del programador, en caso de que el programador necesite una funcionalidad x es más sencillo darle las herramientas para que el la cree o porque no importar una libreria que agregue esas funcionalidades o que extienda otras funcionalidades
+>El diseñador del lenguaje no debe estar preocupado por las nesecidades del programador, en caso de que el programador necesite una funcionalidad x es más sencillo darle las herramientas para que el la cree o porque no importar una libreria que agregue esas funcionalidades o que extienda otras funcionalidades.
+>- Un ejemplo de simplicidad es el lenguaje Java que solo cuenta con 50 palabras reservadas como tal, y el por separado SDK con un conjunto de clases ya construidas en base a esas palabras.
 
 2. **Expresibilidad**: Es la capacidad con la que cuenta el lenguaje para expresar procesos y estructuras mas complejas de la manera mas natural posible, es decir, se debe poder modelar el programa con la mayor naturalidad posible, junto al dominio del problema. Muchas veces esta caracteristica puede chocar con la ***Simplicidad***.
 
 >[!note] A Tener en Cuenta
 >En este punto va a desatacar o resaltar con que fin fue contruido el lenguaje de programación, es decir para que dominio de problema se creo dicho lenguaje.
 
-3. **Seguridad**: No debe dar posibilidad a la escritura de programa defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir codigo erroneo o inseguro. Al mismo tiempo a mayor seguridad se le agregue al programa mas afecta la expresividad y extencibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
+3. **Seguridad**: No debe dar posibilidad a la escritura de programa defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir codigo erroneo o inseguro. Al mismo tiempo a mayor seguridad se le agregue al programa mas afecta la expresibidad y extencibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
 4. **Regularidad**: Como deben convinarse o relacionarse los conceptos en el mismo lenguaje, para lograr la maxima potencia con un numero limitado de sentencias. Muchas veces este concepto se puede dividir en tres: 
 	- **Generalidad**: Se refiere a la capasidad que tiene el lenguaje de brindarte de base los tipos de datos parametrizados o genericos.
 	- **Ortogonalidad**: Se refiere a tener la posibilidad de convinar las distintas caracteristicas de este mismo a la hora de la resolución de un programa. De tal manera que no se genere ningun resultado inesperado.
@@ -25,7 +26,7 @@ Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de
 
 >[!note] A Tener en Cuenta
 > - Si un lenguaje posee rebustez quiere decir que por mas que se produzca un error este es predecible y manejable.
-> - No confundir Robustez con Seguridad, éste ultima se refuere a herramientas que te da el lenguaje para escribir codigo mas fiable, en cambio la robustez es algo que se mide en tiempo de ejecución. Ejemplo: Python es un lenguaje inseguro pero es robusto porque te deja manejar las excepciones que se porduzcan durante ejecución.
+> - No confundir Robustez con Seguridad, éste ultima se refuere a herramientas que te da el lenguaje para escribir codigo mas fiable, en cambio la robustez es algo que se mide en tiempo de ejecución. Ejemplo: Python es un lenguaje inseguro pero es robusto porque te deja manejar las excepciones que se produzcan durante ejecución.
 
 6. **Flexibilidad**: Facilidad que permite que un mismo programa pueda realizar variaciones sobre una misma entidad sin necesidad de realizar modificaciones. Por ejemplo el *tiempo de ligadura* es algo que compromete la flexibilidad, es decir, mientras mas estricto es en su tipado mas flexibilidad pierde.
 
@@ -82,4 +83,4 @@ A continuacion se considera cada una de las preguntas.
 
 - **Oportunidad**: Lo deseable seria estandarizar un lenguaje lo suficiente pronto para que exista suficiente experiencia en el uso del lenguaje, pero no demasiado tarde, para no alentar muchas implementaciones incompatibles.
 - **Conformidad**: Si existe un estandar para un lenguaje, se suele hablar de conformidad con respecto a ese estandar. Un programa es conforme si solo utiliza caracteristicas definidas en el estandar. Un compilador conformable es uno que, cuando se le da un programa conforme, produce un programa ejecutable que genera la salida correcta. Observese que esto nada dice acerca de extensiones del estandar. Si un compilador agrega caracteristicas adicionales, entonces cualquier programa que las utilice no es conformado, y el estandar no dice nada acerca de cuales deberan ser los resultados del computo.
-- **Obsolescencia**: Conforme nuestro conocimiento y experiencia de la programacion evolucionan, las nuevas arquitecturas de computadora requieren nuevas caracteristicas los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años despues. El proceso de estandarizacion ya toma parte de esto en cuenta. Los estandares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema en la actualizacion de un estandar es que hacer con la colección existente de programas escritos para el estandar antiguo. Por esta razon, casi todos los estandares requieren compatibilidad hacia atras; el nuevo estandar debe incluir versiones mas antiguas del lenguaje.
+- **Obsolescencia**: Conforme nuestro conocimiento y experiencia de la programacion evolucionan, las nuevas arquitecturas de computadora requieren nuevas caracteristicas para los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años despues. El proceso de estandarizacion ya toma parte de esto en cuenta. Los estandares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema en la actualización de un estandar es que hacer con la colección existente de programas escritos para el estandar antiguo. Por esta razon, casi todos los estandares requieren compatibilidad hacia atras; el nuevo estandar debe incluir versiones mas antiguas del lenguaje.
