Corrección de errores v2

--- a/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -14,7 +14,7 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo mas
 ***Las palabras o cadenas de caracteres*** son secuencias finitas de símbolos seleccionados de un alfabeto, existe un caso partucular de las cadenas que es la ***cadena vacía***, que es aquella que no es compuesta por ningun simbolo; que por lo general el representada con las letras gruegas **Ɛ** ó **𝝀**. Y la ***longitud de una palabra |w|*** es la cantidad de simbolos que contiene una palabra incluyendo las repreticiones.
 
 >[!note] Nota
->La logitud de caracter de la cadena vacía (|Ɛ|) es igual a cero
+>La logitud de caracter de la cadena vacía (|Ɛ|) es igual a cero, siempre y cuando los simbolos que se usa para representarlos no esten incluidos en el alfabeto dado.
 
 ###### Operaciones sobre cadenas
 
