--- a/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/3. Diseño de Lenguajes de Programación.md
@@ -1,7 +1,7 @@
 
 ## Planificación y Diseño del Lenguaje
 
-A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese proncipio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación para que se lo dese crear comenzaremos a diseñar el lenguaje.
+A la hora de la creación de un lenguaje se debe tener en cuenta el para que se va a usar y conforme a ese proncipio comenzar a plantear que funcionalidades se le van a ir incorporando. En pocas palabras, de acuerdo al dominio de aplicación para que se lo desee crear comenzaremos a diseñar el lenguaje.
 Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de **abstracción de datos** y **empaquetado**, es decir, la posibilidad de poder usar código ya previamente testeado y construido, sin tener que volver a escribirlo.
 
 ## Principios para un buen Diseño
@@ -17,7 +17,7 @@ Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de
 >[!note] A Tener en Cuenta
 >En este punto va a desatacar o resaltar con que fin fue contruido el lenguaje de programación, es decir para que dominio de problema se creo dicho lenguaje.
 
-3. **Seguridad**: No debe dar posibilidad a la escritura de programa defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir codigo erroneo o inseguro. Al mismo tiempo a mayor seguridad se le agregue al programa mas afecta la expresibidad y extencibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
+3. **Seguridad**: No debe dar posibilidad a la escritura de programa defectuosos, se debe tratar de eliminar las herramientas con las que se pueda escribir codigo erroneo o inseguro. Al mismo tiempo a mayor seguridad se le agregue al lenguaje mas afecta la expresibidad y extencibilidad del mismo. Ejemplo el chequeo de tipos, la eliminación de punteros. 
 4. **Regularidad**: Como deben convinarse o relacionarse los conceptos en el mismo lenguaje, para lograr la maxima potencia con un numero limitado de sentencias. Muchas veces este concepto se puede dividir en tres: 
 	- **Generalidad**: Se refiere a la capasidad que tiene el lenguaje de brindarte de base los tipos de datos parametrizados o genericos.
 	- **Ortogonalidad**: Se refiere a tener la posibilidad de convinar las distintas caracteristicas de este mismo a la hora de la resolución de un programa. De tal manera que no se genere ningun resultado inesperado.
@@ -34,16 +34,16 @@ Algo que todo lenguaje debe tener o con lo que debe contar es con el concepto de
 >Los lenguajes que deseen tener mas flexibilidad estan forzados a perder seguridad, el mejor ejemplo de esto son los lenguajes interpretados.
 
 7. **Eficiencia**: Principio que refleja o relación entre los recursos utilizados y los objetivos conseguidos. 
-	- **Costo-Beneficio**: Se debera analizar el dominio del problema para el que se va a utilizar al lenguaje y a su vez su expresividad, para ver si éste nos brinda la eficiencia que nosotros estamos buscando para esa aplicacion.
+	- **Costo-Beneficio**: Se debera analizar el dominio del problema que se intenta resolver en dicho lenguaje y a su vez su expresibidad, para ver si éste nos brinda la eficiencia que nosotros estamos buscando para esa aplicacion.
 	- **Eficiencia de la implementación**: Relacionado a los esfuerzos necesarios para escribir un traductor para ese lenguaje.
 	- **Eficiencia del código**: Debe brindar facilidades para que un traductor pueda crear código ejecutable de manera eficiente, esto se puede hacer mediante un transpilador o utilizando el tipado estatico por sobre el dinamico.
-	- **Eficiencia de la traducción**: Debe permitir que el código se traduzca a codigo fuente de manera rapida y de un tamaño razonable. Esto se puede lograr por ejemplo exigiendo que las variables que se vayan a utilizar sean declaradas de antemano.
+	- **Eficiencia de la traducción**: Debe permitir que el código fuente se traduzca a código objeto de manera rapida y al mismo tiempo poseer un tamaño razonable. Esto se puede lograr por ejemplo exigiendo que las variables que se vayan a utilizar sean declaradas de antemano.
 	- **Eficiencia de la programación**: Esta relacionado a la facilidad de escritura del lenguaje y su exprecibidad, a través de una sintaxis consisa y la no declaración de las variables antes de su uso.
 
 >[!note] Aclaración
 >Cada lenguaje debe proporcionar una implementación aceptablemente eficiente, que es variara de acuerdo al dominio de aplicación.
 
-8. **Reusavilidad**: Propiedad que permite que un componente de software pueda ser utilizado en otras aplicaciones. Los conceptos que se deben incluir en un lenguaje para que esto se cumpla es a través de:
+8. **Reusabilidad**: Propiedad que permite que un componente de software pueda ser utilizado en otras aplicaciones. Los conceptos que se deben incluir en un lenguaje para que esto se cumpla es a través de:
 	- Unidades Genericas.
 	- Abstracción de Datos.
 	- Polimorfismo Parametrico.
@@ -68,12 +68,6 @@ Un lenguaje que esta estandarizado le brinda mucha mas validez al código que es
 
 #### Consideraciones Importantes
 
-Es importante tener en cuanta cuando es el tiempo idoneo para estandarizarce, y que esta estandarizacion no sea tardia y haga casi imposible la adopción de los estandares por parte de los desarrolladores, como paso por ejemplo en el caso de ***Fortran***. Esto va de la mano tambien de la *obselecencia*, cada una cierta cantidad de años se vuelve a evaluar el estandar y se comienza a realizar cambios en este, deshaciendose de antiguas funcionalidades y agregando nuevas, y al mismo tiempo ver como va a evolucionar el lenguaje en si mismo.
-
->[!important] Conformidad de un Lenguaje
->- Un programa ***conforme*** es aquel que solo utiliza caracteristicas descriptas en el estandar
->- Un ***compilador conformable*** es aquel que tome un programa conforme y produzca un programa ejecutable que genrera la salida correcta.
-
 Para utilizar los estandares de forma eficaz, es necesario ocuparse de tres cuestiones:
 1. Oportunidad. ¿Cuando estandarizar un lenguaje?
 2. Conformidad. ¿Que significa que un programa se adhiere a un estandar y que un compilador compila un estandar?
@@ -83,4 +77,9 @@ A continuacion se considera cada una de las preguntas.
 
 - **Oportunidad**: Lo deseable seria estandarizar un lenguaje lo suficiente pronto para que exista suficiente experiencia en el uso del lenguaje, pero no demasiado tarde, para no alentar muchas implementaciones incompatibles.
 - **Conformidad**: Si existe un estandar para un lenguaje, se suele hablar de conformidad con respecto a ese estandar. Un programa es conforme si solo utiliza caracteristicas definidas en el estandar. Un compilador conformable es uno que, cuando se le da un programa conforme, produce un programa ejecutable que genera la salida correcta. Observese que esto nada dice acerca de extensiones del estandar. Si un compilador agrega caracteristicas adicionales, entonces cualquier programa que las utilice no es conformado, y el estandar no dice nada acerca de cuales deberan ser los resultados del computo.
-- **Obsolescencia**: Conforme nuestro conocimiento y experiencia de la programacion evolucionan, las nuevas arquitecturas de computadora requieren nuevas caracteristicas para los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años despues. El proceso de estandarizacion ya toma parte de esto en cuenta. Los estandares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema en la actualización de un estandar es que hacer con la colección existente de programas escritos para el estandar antiguo. Por esta razon, casi todos los estandares requieren compatibilidad hacia atras; el nuevo estandar debe incluir versiones mas antiguas del lenguaje.
+
+>[!important] Conformidad de un Lenguaje
+>- Un programa ***conforme*** es aquel que solo utiliza caracteristicas descriptas en el estandar
+>- Un ***compilador conformable*** es aquel que tome un programa conforme y produzca un programa ejecutable que genrera la salida correcta.
+
+- **Obsolescencia**: Conforme nuestro conocimiento y experiencia en la programación evolucionan, las nuevas arquitecturas de computadora requieren nuevas caracteristicas para los lenguajes. Una vez que se estandariza un lenguaje, parece "arcaico" unos cuantos años despues. El proceso de estandarizacion ya toma parte de esto en cuenta. Los estandares se tienen que revisar cada cinco años y ya sea renovarse o descartarse. Un problema con la actualización de un estandar, es que hacer con la colección existente de programas escritos para el estandar antiguo. Por esta razon, casi todos los estandares requieren compatibilidad hacia atras; el nuevo estandar debe incluir versiones mas antiguas del lenguaje.
