--- a/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/4. Implementación de Lenguajes de Programación.md
@@ -11,7 +11,7 @@ Es un traductor que ejecuta un programa escrito en un LP de alto nivel, directam
 > 2. Determina las acciones que han de ser ejecutadas.
 > 3. Ejecuta las acciones.
 > 
-> Cada acción de un programa, se chequea y ejecuta en el momento en que se las encuentra, funcionana de la misma forma que el ciclo ***fetch*** del procesador. Por esta misma razon los lenguajes interpretados son mas lentos que los compilados.
+> Cada acción de un programa, se chequea y ejecuta en el momento en que se las encuentra, por esta misma razon los lenguajes interpretados son mas lentos que los compilados. Se puede decir que funcionana de la misma forma que el ciclo ***fetch*** del procesador. 
 
 <span class="centerImg"> ![[LP-interpretes.png]] </span>
 
@@ -52,10 +52,10 @@ El proceso de compilación consiste en dos pasos:
 > - En el analisis semántico se completa la tabla agregando los atributos a cada elemento y se obtiene la información para procesar las estructuras.
 > - Las demas etapas utilizaran la información de la tabla para generar código ejecutable eficiente
 > 
-> Una vez que el proceso de compilación termina la tabla de valores se descarta ya que los tipos, el alcance, el modigicador entre otras cosas ya fue evaluado en los procesos anteriores.
+> Una vez que el proceso de compilación termina la tabla de valores se descarta ya que los tipos, el alcance, el modificador entre otras cosas ya fue evaluado en los procesos anteriores.
 
 - **Optimización**: El analizador semántico produce como salida el programa ejecutable traducido, representado en algún ***código intermedio***, muchas veces esta traducción puede producir código extremadamenta deficiente, es por eso que entra en acción el ***optimizador*** que se encarga de re organizar el código de tal forma que al traducirlo a assembler o a binario este genere un programa lo más optimo y eficiente posible.
-- **Generación de código**: Se toma el código ya optimizado y se lo traduce a ***assembler***, en tal caso luego otro programa lo tendra que traducir a binario, o traducirlo directamente a binario.
+- **Generación de código**: Después de la optimización, se transforman los enunciados a lenguaje Assembler, código de máquina u otra forma de programa objeto que va a constituir la salida de la traducción (.obj). Este proceso implica dar el formato apropiado a la salida, basándose en la información que contiene la representación interna del programa.
 - **Vinculación**: por ultimo se toman todos estos subprogramas ya previamente traducidos, se indexan unos con otros y se genera un archivo ejecutable.
 
 |            | Ventajas                                                                                                          | Desventajas                                                                                                                             |
@@ -78,7 +78,7 @@ El proceso usado en una implementación híbrida es similar al siguiente:
 <span class="centerImg"> ![[LP-implementacion-memeoria.png]] </span>
 
 >[!important] Diferencia entre Registro de Activación e Instancia de Registro de Activación
->Un registro de activación es una estructura estática que contiene tipos de datos, que va variando dependiendo el lenguaje donde se haya implementado. Mientras que una instancia de registro de activación es dinámica, se crea a partir del registro de activación cuando se llama/activa un procedimiento y es guardado en una pila (es eliminada cuando se finaliza/desactiva el procedimiento, regresando a la instancia anterior).
+>Un registro de activación es una estructura estática que contiene tipos de datos, que va variando dependiendo el lenguaje donde se haya implementado. Mientras que una instancia de registro de activación es dinámica, se crea a partir del registro de activación cuando se llama/activa un subprograma y es guardado en una pila (es eliminada cuando se finaliza/desactiva el subprograma, regresando a la instancia anterior).
 
 <span class="centerImg"> ![[LP-implementacion-memoria2.png]] </span>
 
