--- a/Lenguajes de Programación/Unidad 2/2. Semántica.md
+++ b/Lenguajes de Programación/Unidad 2/2. Semántica.md
@@ -24,7 +24,7 @@ Al contrario que las normas sintacticas que se pueden describir a traves de la n
 
 ## Semántica Estatica
 
-#### Gramática de Atributos
+#### Semántica de Atributos
 Es una gramática libre de contexto G = (S, N, T, P), a la que se le han agregado los una serie de nuevos elementos que van a aportar mas información al arbol sintactico y nos sera de utilidad a la hora de la implementación de un analizador semántico. Entre esos elementos se encuentran:
 
 - Atributos: que son las propiedades que posee una estructura semántica, la cual es asociada a cada estructura. Estos atributos varian segun los información que contienen y en que proceso hayan sido creados. Un ejemplo de lo que podrian llegar a almacenar estos atributos seria: El tipo de una variable, el valor de una expreción, una dirección de memoria.
