--- a/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
+++ b/Lenguajes de Programación/Unidad 1/2. Paradigmas de Programación.md
@@ -2,7 +2,7 @@
 >[!important] Definición
 >Un paradigma de programación es una colección de patrones conceptuales que modelan la forma de razonar sobre problemas, de formar algoritmos y de estrurar programas.
 >- Un lenguaje ***soporta*** un Paradigma, como es el caso de Haskell con el paradigma funcional.
->- Un lenguaje ***edmite*** un Paradigma, como en el caso de Python que te permite escribir código como si estubieras en un lenguaje funcional.
+>- Un lenguaje ***edmite*** un Paradigma, como en el caso de Python que te permite escribir código como si estuvieras en un lenguaje funcional.
 
 son los metodos que orientan el proceso de programación de un componente o sistema.
 
